fix: Add image and adjust alignment

--- a/Javascript/Tutorial_Practice/Design-modern-school-landing-page/style.css
+++ b/Javascript/Tutorial_Practice/Design-modern-school-landing-page/style.css
@@ -204,8 +204,10 @@ body {
 
 .hero-image {
   object-fit: contain;
-  max-height: 320px;
-  margin: 0 auto;
+  /* max-height: 320px; */
+  max-width: 100%;
+  margin: 2vw auto;
+  align-self: center;
 }
 
 .hero-text {
